src/asset/scss/custom/_roll.scss
.roll-rail {
    overflow: hidden;
    margin-left: -$space__4;
    margin-right: -$space__4;

    @include respond-above($break__medium) {
        margin-left: -$space__6;
        margin-right: -$space__6;
    }

    @include respond-above($break__xlarge) {
        margin-right: 0;
    }
}

.roll-wrap {
    display: flex;
    overflow-x: auto;
    overflow-y: hidden;
    -webkit-overflow-scrolling: touch;
    margin-bottom: -30px; // Cover scrollbar

    @include respond-above($break__medium) {
        padding-left: 42px;
    }

}

.roll-pane {
    display: flex;
    position: relative;
    padding-left: $space__4; // Space between items
    padding-bottom: 30px;
    width: 84%;
    min-width: 84%;

    @include respond-above($break__medium) {
        width: 66%;
        min-width: 66%;
    }

    @include respond-above($break__large) {
        width: 42%;
        min-width: 42%;
    }

    // Hack to make room after the last scrollable item.
    &:last-child:after {
        content: ' ';
        width: $space__4;
        height: $space__4;

        @include respond-above($break__medium) {
            width: $space__6;
            height: $space__6;
        }

        position: absolute;
        top: 0;
        left: 100%;
    }
}

.roll-pane-content {
    width: 100%;
    height: 100%;
    border-radius: 3px;
}

